--- a/unowned/unowned/Info.plist
+++ b/unowned/unowned/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>OfficinaSans-Bold.oft</string>
+		<string>OfficinaSansExtraBold.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
