--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 {\rtf1\ansi\ansicpg1251\cocoartf2636
 \cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fnil\fcharset0 .AppleSystemUIFontMonospaced-Regular;}
 {\colortbl;\red255\green255\blue255;\red91\green100\blue110;\red255\green255\blue255;\red27\green31\blue35;
-\red109\green51\blue215;\red194\green11\blue35;\red128\green0\blue128;}
+\red109\green51\blue215;\red194\green11\blue35;\red127\green0\blue128;}
 {\*\expandedcolortbl;;\cssrgb\c43137\c46667\c50588;\cssrgb\c100000\c100000\c100000;\cssrgb\c14118\c16078\c18431;
 \cssrgb\c50980\c31373\c87451;\cssrgb\c81176\c13333\c18039;\cssrgb\c57919\c12801\c57269;}
 \paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
@@ -471,7 +471,7 @@
 \pard\intbl\itap1\pardeftab720\qr\partightenfactor0
 \cf2 \cell 
 \pard\intbl\itap1\pardeftab720\partightenfactor0
-\cf4 \cell \row
+\cf4 unowned/unowned/Pods\cell \row
 
 \itap1\trowd \taflags1 \trgaph108\trleft-108 \trbrdrl\brdrnil \trbrdrr\brdrnil 
 \clvertalt \clshdrawnil \clwWidth1000\clftsWidth3 \clminw1000 \clbrdrt\brdrnil \clbrdrl\brdrnil \clbrdrb\brdrnil \clbrdrr\brdrnil \clpadl200 \clpadr200 \gaph\cellx4320
