--- a/.gitignore
+++ b/.gitignore
@@ -455,7 +455,8 @@
 \pard\intbl\itap1\pardeftab720\qr\partightenfactor0
 \cf2 \cell 
 \pard\intbl\itap1\pardeftab720\partightenfactor0
-\cf2 \cb3 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control\cf4 \cb1 \cell \row
+\cf2 \cb3 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control\
+\cf4 \cb1 \cell \row
 
 \itap1\trowd \taflags1 \trgaph108\trleft-108 \trbrdrl\brdrnil \trbrdrr\brdrnil 
 \clvertalt \clshdrawnil \clwWidth1000\clftsWidth3 \clminw1000 \clbrdrt\brdrnil \clbrdrl\brdrnil \clbrdrb\brdrnil \clbrdrr\brdrnil \clpadl200 \clpadr200 \gaph\cellx4320
@@ -463,7 +464,7 @@
 \pard\intbl\itap1\pardeftab720\qr\partightenfactor0
 \cf2 \cell 
 \pard\intbl\itap1\pardeftab720\partightenfactor0
-\cf4 \cell \row
+\cf4 Pods/\cell \row
 
 \itap1\trowd \taflags1 \trgaph108\trleft-108 \trbrdrl\brdrnil \trbrdrr\brdrnil 
 \clvertalt \clshdrawnil \clwWidth1000\clftsWidth3 \clminw1000 \clbrdrt\brdrnil \clbrdrl\brdrnil \clbrdrb\brdrnil \clbrdrr\brdrnil \clpadl200 \clpadr200 \gaph\cellx4320
@@ -480,6 +481,9 @@
 \cf2 \cell 
 \pard\intbl\itap1\pardeftab720\partightenfactor0
 \cf7 unowned/Pods\cf4 \
+Podfile\
+Podfile.lock\
+/Pods\
 \cell \row
 
 \itap1\trowd \taflags1 \trgaph108\trleft-108 \trbrdrl\brdrnil \trbrdrr\brdrnil 
