--- a/unowned/unowned/Info.plist
+++ b/unowned/unowned/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>OfficinaSansExtraBold.ttf</string>
+		<string>OfficinaSansExtraBoldC.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
